2014-06-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (parse_browser_input), src/help.c (parse_help_input):
	Remove two pointless calls of get_shortcut(), and adjust the comments.
	* src/nano.c (do_toggle): When toggling softwrap, only the edit window
	needs to be refreshed, not the entire screen.
	* src/browser.c (do_browser): Remove superfluous abortion variable,
	and place two comments better.
	* src/text.c (do_redo): Rename 'undidmsg' to 'redidmsg', to be apt.

2014-06-22  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_redo): When redoing a line join at the tail
        of the file, make sure openfile->filebot is updated.
	* src/text.c (undo_cut, redo_cut, do_undo, add_undo, update_undo):
	Fix three leaks of the cutbuffer, shorten and regroup some stuff,
	and remove an unneeded iteration of cutbottom.

2014-06-21  Mark Majeres  <mark@engine12.com>
	* src/text.c (undo_cut, add_undo): When undoing a cut-till-eof,
	put the cursor back where the cut started, and not at the end.
	* src/text.c (do_undo): When undoing a line break at the tail
	of the file, make sure openfile->filebot is updated.

2014-06-21  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/move.c, src/nano.c: Miscellaneous whitespace fixes, one
	type fix, and one more #ifdef NANO_TINY.

2014-06-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h, src/global.c: Remove two obsolete variables and an
	unneeded extern, and regroup some stuff.
	* src/files.c (check_dotnano): Wrap long lines and actually report
	the name that is not a directory.
	* src/*: Miscellaneous whitespace adjustments and comment tweaks.
	* src/files.c: Fix compilation with --enable-tiny --enable-browser.
	* doc/man/nano.1, doc/texinfo/nano.texi: History logging no longer
	depends upon nanorc support, plus many other tweaks.
	* src/global.c (strtosc): Fix compilation with --enable-tiny
	--enable-histories --enable-nanorc.
	* src/text.c: Fix compilation with --enable-tiny --enable-wrapping.